[package]
name = "defernodate"
version = "0.1.0"
edition = "2024"
description = "Hybrid recurring calendar engine backed by Redis"
license = "MIT"
authors = ["Kyle Falconer <kylefalconer@pm.me>"]
repository = "https://github.com/Kyle-Falconer/defernodate"
documentation = "https://github.com/Kyle-Falconer/defernodate/blob/main/README.md"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }
redis = { version = "1", features = ["aio", "tokio-comp"] }
rrule = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
testcontainers = "0.25"
testcontainers-modules = { version = "0.13", features = ["redis"] }
tokio = { version = "1", features = ["full", "test-util"] }
