[package]
name = "defernodate"
version = "0.2.0"
edition = "2024"
description = "Pure calendar/RRULE expansion library"
license = "MIT"
authors = ["Kyle Falconer <kylefalconer@pm.me>"]
repository = "https://github.com/Kyle-Falconer/defernodate"
documentation = "https://github.com/Kyle-Falconer/defernodate/blob/main/README.md"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }
rrule = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
